@@ -205,6 +205,8 @@ Changed in ATK 6.2
   by setting $config_session_name. [Peter]
 * Made atkGetUser accept 'key' parameter, allowing you to only get 
   one bit of data from the user data. [Boy]
+* Made DHTML Calendar use ATKs maxdate and mindate 
+  to disable dates. [Boy]
 
 Changed in ATK 6.1
 ------------------
